<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">潘多拉锁屏</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="determine">确定</string>
    <string name="setting_open_pandoralocker">启用锁屏</string>
    <string name="setting_lock_type">设置锁屏密码</string>
    <string name="init_setting_close_systemlocker">关闭系统锁屏</string>
    <string name="init_setting_close_systemlocker_detail">解决潘多拉锁屏和系统锁屏冲突的问题</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_check_new_version">检查新版本</string>
    <string name="setting_about_us">关于潘多拉</string>
    <string name="setting_about_pandora">潘多拉锁屏，下拉有料！</string>
    <string name="contentDescription"></string>
    <string name="setting_about_text">下拉有料</string>
    <string name="setting_about_email">pandora@hdlocker.com</string>
    <string name="setting_about_cooperation">商务合作：13910064771</string>
    <string name="lock_pattern_prompt">绘制解锁图案</string>
    <string name="lock_pattern_verify_prompt">绘制当前解锁图案</string>
    <string name="lock_pattern_complete">完成后请松开手指</string>
    <string name="lock_pattern_limit_prompt">至少需连接四个点</string>
    <string name="lock_pattern_new_pattern">您的新解锁图案</string>
    <string name="lock_pattern_error">两次图案不一致，请重试绘制</string>
    <string name="lock_pattern_save_prompt">已记录</string>
    <string name="lock_pattern_confirmation_prompt">再次绘制图案进行确定</string>
    <string name="lock_pattern_verify_fail">图案不匹配，请重新绘制</string>
    <string name="guide_button_text">前往初始设置</string>
    <string name="guide_title_text">潘多拉锁屏</string>
    <string name="guide_explore_title_text">带你探索未知的世界</string>
    <string name="init_setting_title">初始设置</string>
    <string name="init_setting_MIUI_allow_floating_window">允许显示悬浮窗</string>
    <string name="init_setting_MIUI_allow_floating_window_detail">保证潘多拉锁屏可以正常运行</string>
    <string name="init_setting_MIUI_trust">信任程序和允许自动启动</string>
    <string name="init_setting_MIUI_trust_detail">保证潘多拉锁屏可以获取必须的权限</string>
    <string name="init_setting_to_set">立即设置</string>
    <string name="init_setting_complete_to_set">完成</string>
    <string name="init_setting_close_systemlocker_prompt">请选择『无』模式</string>
    <string name="init_setting_MIUI_close_systemlocker_prompt_miui_one">开启『开发者选项』开关</string>
    <string name="init_setting_MIUI_close_systemlocker_prompt_miui_two">开启『直接进入系统』开关</string>
    <string name="init_setting_MIUI_close_systemlocker_prompt_miui_three">*如果您已经开启屏幕密码，需要先关闭系统屏幕密码</string>
    <string name="init_setting_MIUI_allow_floating_window_prompt">请开启『显示悬浮窗』开关</string>
    <string name="init_setting_MIUI_trust_prompt_one">开启『我信任该程序』</string>
    <string name="init_setting_MIUI_trust_prompt_two">和『自动启动』开关</string>
    <string name="init_setting_read_notification_title">打开通知权限</string>
    <string name="init_setting_read_notification_prompt">开启权限后，即可第一时间收到通知推送</string>
    <string name="lock_week_monday">星期一</string>
    <string name="lock_week_tuesday">星期二</string>
    <string name="lock_week_wednesday">星期三</string>
    <string name="lock_week_thursday">星期四</string>
    <string name="lock_week_friday">星期五</string>
    <string name="lock_week_saturday">星期六</string>
    <string name="lock_week_sunday">星期日</string>
    <string name="lock_guide_prompt_one">底部停留锁定屏幕</string>
    <string name="lock_guide_prompt_two">轻触解锁</string>
    <string name="update_prompt_no_update">当前已经是最新版本！</string>
    <string name="update_prompt_no_wify">为了节省您的流量，请在wifi环境下操作！</string>
    <string name="update_prompt_no_internet">网络连接超时，请稍候再试！</string>
    <string name="pandora_box_default_tip">没有猛料了...</string>
    <string name="pandora_box_no_net_tip">网络未连接，猛料拉不出</string>
    <string name="pandora_box_battery_charging">正在充电</string>
    <string name="pandora_box_battery_full">电量已满</string>
    <string name="pandora_wallpaper_title">管理壁纸</string>
    <string name="pandora_wallpaper_custom">自定义壁纸</string>
    <string name="pandora_wallpaper_advice">下载壁纸</string>
    <string name="pandora_wallpaper_show_image_title">图片</string>
    <string name="pandora_wallpaper_dialog_camera">拍照</string>
    <string name="pandora_wallpaper_dialog_gallery">相册</string>
    <string name="pandora_setting_title">潘多拉锁屏</string>
    <string name="init_setting_title_detail">初始设置详细说明</string>
    <string name="pandora_wallpaper_dialog_title">确认删除此张壁纸？</string>
    <string name="pandora_dialog_cancle">取消</string>
    <string name="pandora_dialog_sure">确认</string>
    <string name="error">出现异常，给您带来的不便，敬请谅解，我们会尽快解决</string>
    <string name="pandora_guide_start">开始体验</string>
    <string name="setting_individualization">个性化设置</string>
    <string name="individualization_notice_switch_button">显示通知栏</string>
    <string name="individualization_message_notification">通知中心隐私设置</string>
    <string name="init_setting_V6_close_systemlocker_title">请按照以下方式关闭系统锁屏</string>
    <string name="init_setting_V6_close_systemlocker_prompt">潘多拉锁屏已经经过测试，不会引起您的设备以及设备上应用的问题</string>
    <string name="init_setting_V6_allow_floating_window_title">开启显示悬浮窗</string>
    <string name="init_setting_V6_allow_floating_window_prompt">开启悬浮窗是为了防止按Home键跳出，潘多拉锁屏不会往您的桌面添加任何悬浮窗</string>
    <string name="init_setting_V6_trust_title">设置信任列表&amp;自动启动</string>
    <string name="init_setting_V6_trust_prompt_one">1.进入『授权管理』</string>
    <string name="init_setting_V6_trust_prompt_two">2.进入『自启动管理』</string>
    <string name="init_setting_V6_trust_prompt_three">3.开启『潘多拉锁屏』开关</string>
    <string name="init_setting_V6_trust_prompt">潘多拉锁屏需要能够在您手机开机时自动启动，只需要一次设置，以后就不需要麻烦啦</string>
    <string name="init_setting_V6_read_notification_title">请勾选『潘多拉锁屏』的读取通知权限</string>
    <string name="init_setting_V6_read_notification_prompt">潘多拉锁屏严格保护您的隐私，只在本机使用这些权限，用以显示通知</string>
    <string name="init_setting_MIUI_under_18_read_notification_title">请进入『潘多拉锁屏』开启服务</string>
    <string name="init_setting_MIUI_under_18_read_notification_prompt_detail">打开</string>
    <string name="pandora_box_guide_set_default_image">立刻设置默认背景</string>
    <string name="individualization_welcome_text">设置欢迎语</string>
    <string name="individualization_welcome_text_detail">锁屏页面，当天气信息无法获取时显示此欢迎语</string>
    <string name="pandora_individualization_message_notification_detail">关闭开关，则隐藏消息头像和消息内容</string>
    <string name="individualization_welcome_text_hint">请输入欢迎语!</string>
    <string name="share_image_news_from">来自：</string>
    <string name="pandora_crop_image_rotate">旋转</string>
    <string name="guide_item_title_one">下拉换一批猛料</string>
    <string name="setting_individualization_open_3G_4G">允许3G/4G时缓存图文</string>
    <string name="warm_prompt_6_10_1">美好的一天开始了</string>
    <string name="warm_prompt_6_10_2">早上好，一束阳光照在你身上，祝你天天开心</string>
    <string name="warm_prompt_10_12_1">每一天的阳光都是温暖的</string>
    <string name="warm_prompt_10_12_2">美丽的一天，灿烂的你</string>
    <string name="warm_prompt_12_13_1">来一顿丰盛的午餐吧</string>
    <string name="warm_prompt_12_13_2">忙碌了一上午，来一顿丰盛的午餐吧</string>
    <string name="warm_prompt_13_15_1">小憩一会儿，精神倍棒</string>
    <string name="warm_prompt_13_15_2">午睡一会，精神百倍</string>
    <string name="warm_prompt_15_17_1">来杯下午茶吧</string>
    <string name="warm_prompt_15_17_2">暖暖的下午茶，融化你的心</string>
    <string name="warm_prompt_17_19_1">和家人一起好好的享受晚餐</string>
    <string name="warm_prompt_17_19_2">不要错过和家人的晚餐哦</string>
    <string name="warm_prompt_19_23_1">放下一天的疲惫，尽情放松吧</string>
    <string name="warm_prompt_19_23_2">吃过晚饭吗？放松一下吧</string>
    <string name="warm_prompt_23_1_1">该睡觉了，做个好梦</string>
    <string name="warm_prompt_23_1_2">该休息了，晚安咯~</string>
    <string name="warm_prompt_1_6_1">zZZ  zZZ</string>
    <string name="warm_prompt_1_6_2">夜深了，还不睡，你在做什么呢</string>
    <string name="pandora_online_wallpaper_title">壁纸库</string>
    <string name="pandora_online_wallpaper_apple">应用</string>
    <string name="sdcard_error">未检测到SDCARD,请检查后重试！</string>
    <string name="setting_network_error">您已设置禁止在3G/4G时下载。\n如需正常使用功能，请打开开关！</string>
    <string name="network_error">网络出现异常，请稍候再试</string>
    <string name="data_error">服务器出现异常，请稍候再试</string>
    <string name="setting_individualization_open_lockscreen_voice">开启锁屏声音</string>
    <string name="keyboardview_keycode_alt" msgid="4856868820040051939">"Alt"</string>
    <string name="keyboardview_keycode_cancel" msgid="1203984017245783244">"取消"</string>
    <string name="keyboardview_keycode_delete" msgid="3337914833206635744">"刪除"</string>
    <string name="keyboardview_keycode_done" msgid="1992571118466679775">"完成"</string>
    <string name="keyboardview_keycode_mode_change" msgid="4547387741906537519">"模式更改"</string>
    <string name="keyboardview_keycode_shift" msgid="2270748814315147690">"Shift 键"</string>
    <string name="keyboardview_keycode_enter" msgid="2985864015076059467">"Enter 键"</string>
    <string name="keyboard_headset_required_to_hear_password" msgid="7011927352267668657">"插上耳机即可听到系统朗读密码键。"</string>
    <string name="keyboard_password_character_no_headset" msgid="2859873770886153678">"点。"</string>
    <string name="number_lock_prompt">请输入密码</string>
    <string name="number_lock_confirmation_prompt">再次输入密码进行确认</string>
    <string name="number_lock_confirmation_fail_prompt">两次输入密码不一致，请重新输入</string>
    <string name="number_lock_success">已成功设置解锁密码</string>
    <string name="number_lock_verify_fail">密码错误，请重新输入</string>
    <string name="lock_password_title">设置锁屏密码</string>
    <string name="lock_password_type_none">无密码</string>
    <string name="lock_password_type_pattern">设置手势密码</string>
    <string name="lock_password_type_number">设置数字密码</string>
    <string name="pandora_favorite_title">我的收藏</string>
    <string name="pandora_favorite_state_nodata">暂无收藏</string>
    <string name="pandora_lock_screen_card_empty_text">没有猛料</string>
    <string name="accessibility_battery_level">Battery <xliff:g id="number">%d</xliff:g> percent.</string>
    <string name="battery_meter_very_low_overlay_symbol">!</string>
    <string name="pandora_share_sina_send">发送</string>
    <string name="pandora_share_to_sina_title">分享到微博</string>
    <string name="pandora_share_prompt">右滑解锁分享内容</string>
    <string name="pandora_share_to_wechat_circle">分享到朋友圈</string>
    <string name="pandora_share_to_wechat">分享到微信好友</string>
    <string name="pandora_share_to_sina">分享到新浪微博</string>
    <string name="pandora_share_to_qq">分享到QQ空间</string>
    <string name="notification_service_name">潘多拉锁屏</string>
    <string name="notify_guide_openpermission_title">请开启通知权限！（强烈建议）</string>
    <string name="notify_guide_openpermission_content">未接来电未读微信不再错过</string>
    <string name="notify_guide_opendetail_title">右划查看通知详情</string>
    <string name="notify_guide_opendetail_content">这是一个示例通知，打开后会帮您跳转到潘多拉设置页面</string>
    <string name="notify_guide_remove_title">这是什么？</string>
    <string name="notify_guide_remove_content">这里会显示您的微信、qq等未读消息\n(双击移除通知)</string>
    <string name="notify_guide_hide_message_title">我要隐藏头像及消息内容</string>
    <string name="notify_guide_hide_message_content">右划此处解锁立即设置隐藏，如果暂时不设置双击移除此通知</string>
    <string name="hide_message_tip">未读消息</string>
    <string name="notification_item_handleTip">右划查看\n双击忽略</string>
    <string name="tip_open_notification_permission">请勾选【潘多拉锁屏】</string>
    <string name="pandora_feedback_send">发送</string>
    <string name="pandora_feedback_title">意见反馈</string>
    <string name="pandora_news_classify_wallpaper">壁纸</string>
    <string name="pandora_news_classify_headlines">头条</string>
    <string name="pandora_news_classify_gossip">八卦</string>
    <string name="pandora_news_classify_micro_choice">微精选</string>
    <string name="pandora_news_classify_beauty">美女</string>
    <string name="pandora_setting_wallpaper_detail_back">返回</string>
    <string name="pandora_setting_wallpaper_detail_apply">应用壁纸</string>
</resources>