<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/crop_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/contentDescription"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/contentDescription"
        android:src="@color/online_wallpaper_preview_translucent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <cn.zmdx.kaka.locker.widget.BaseButton
            android:id="@+id/crop_image_return"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/pandora_setting_wallpaper_detail_back" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2" />

        <cn.zmdx.kaka.locker.widget.BaseButton
            android:id="@+id/crop_image_apply"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/pandora_setting_wallpaper_detail_apply" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>