<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/init_setting_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:clickable="true"
    android:fillViewport="true"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/setting_black_translucent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical"
            android:overScrollMode="always"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/init_setting_MIUI_allow_floating_window_guide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setting_title_textview_margin_left"
                    android:layout_marginRight="@dimen/setting_title_textview_margin_left"
                    android:layout_marginTop="@dimen/init_setting_item_margin_top"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                        style="@style/init_setting_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_setting_MIUI_allow_floating_window" />

                    <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                        style="@style/init_setting_small_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_setting_MIUI_allow_floating_window_detail" />

                    <cn.zmdx.kaka.fast.locker.widget.BaseButton
                        android:id="@+id/init_setting_MIUI_allow_floating_window_to_set"
                        style="@style/init_setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/init_setting_button_margin_top"
                        android:gravity="center"
                        android:text="@string/init_setting_to_set" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/init_setting_MIUI_close_systemlocker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setting_title_textview_margin_left"
                    android:layout_marginRight="@dimen/setting_title_textview_margin_left"
                    android:layout_marginTop="@dimen/init_setting_item_margin_top"
                    android:orientation="vertical" >

                    <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                        style="@style/init_setting_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_setting_close_systemlocker" />

                    <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                        style="@style/init_setting_small_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_setting_close_systemlocker_detail" />

                    <cn.zmdx.kaka.fast.locker.widget.BaseButton
                        android:id="@+id/init_setting_close_systemlocker_to_set"
                        style="@style/init_setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/init_setting_button_margin_top"
                        android:gravity="center"
                        android:text="@string/init_setting_to_set" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/init_setting_MIUI_trust_guide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setting_title_textview_margin_left"
                    android:layout_marginRight="@dimen/setting_title_textview_margin_left"
                    android:layout_marginTop="@dimen/init_setting_item_margin_top"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                        style="@style/init_setting_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_setting_MIUI_trust" />

                    <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                        style="@style/init_setting_small_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_setting_MIUI_trust_detail" />

                    <cn.zmdx.kaka.fast.locker.widget.BaseButton
                        android:id="@+id/init_setting_MIUI_trust_to_set"
                        style="@style/init_setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/init_setting_button_margin_top"
                        android:gravity="center"
                        android:text="@string/init_setting_to_set" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/init_setting_read_notification_bar_guide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/init_setting_item_margin_top"
                    android:layout_marginLeft="@dimen/setting_title_textview_margin_left"
                    android:layout_marginRight="@dimen/setting_title_textview_margin_left"
                    android:layout_marginTop="@dimen/init_setting_item_margin_top"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                        style="@style/init_setting_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_setting_read_notification_title" />

                    <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                        style="@style/init_setting_small_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/init_setting_read_notification_prompt" />

                    <cn.zmdx.kaka.fast.locker.widget.BaseButton
                        android:id="@+id/init_setting_read_notification_bar_to_set"
                        style="@style/init_setting_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/init_setting_button_margin_top"
                        android:gravity="center"
                        android:text="@string/init_setting_to_set" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>