<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/guide_lock_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fast_default_wallpaper" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/setting_black_translucent" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/pandora_setting_guide_logo_layout_marginTop"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_web" />

        <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="25dp" />

        <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
            android:id="@+id/explore_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/setting_about_text"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <cn.zmdx.kaka.fast.locker.widget.RippleView
            xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:id="@+id/go_setting"
            style="@style/rippleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@color/material_design_color"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            ripple:rv_color="#80d8ff" >

            <cn.zmdx.kaka.fast.locker.widget.TypefaceTextView
                android:id="@+id/go_setting_prompt"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/guide_button_text"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </cn.zmdx.kaka.fast.locker.widget.RippleView>
    </RelativeLayout>

</RelativeLayout>