<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/cn.zmdx.kaka.locker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:baselineAligned="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_pandoralocker_prompt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setting_open_pandoralocker" />

        <cn.zmdx.kaka.locker.widget.SwitchButton
            android:id="@+id/setting_pandoralocker_switch_button"
            style="@style/setting_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:frameDrawable="@drawable/switch_frame"
            app:sliderDrawable="@drawable/switch_slider_normal"
            app:stateDrawable="@drawable/switch_state_normal"
            app:stateMaskDrawable="@drawable/switch_state_mask" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_lock_type_prompt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/setting_lock_type" />

        <cn.zmdx.kaka.locker.widget.SwitchButton
            android:id="@+id/setting_pandoralocker_password"
            style="@style/setting_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:frameDrawable="@drawable/switch_frame"
            app:sliderDrawable="@drawable/switch_slider_normal"
            app:stateDrawable="@drawable/switch_state_normal"
            app:stateMaskDrawable="@drawable/switch_state_mask" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_change_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/setting_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_systemlocker_prompt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/setting_close_systemlocker" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_feedback_prompt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/setting_feedback" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_checkout_new_version_prompt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/setting_check_new_version" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_concern_team"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/setting_about_us" />
    </LinearLayout>

</LinearLayout>